changed header txt, added target group

--- a/materialsammlung/index.html
+++ b/materialsammlung/index.html
@@ -10,9 +10,7 @@ hide_hero: true
                 <div class="col-lg-10 col-lg-offset-1 section-sammlung">
                   <h2 class="section-headline">Aktiv werden und Demokratie mitgestalten</h2>
                     <p id="teaser-oer-page">
-                        Wie schaffen wir es, eine Gesellschaft zu gestalten, die offen ist und im Sinne der Gemeinschaft agiert? Wir müssen aktiv werden. Hier findest du Materialien zu Themen, die eine solche Gesellschaft ausmachen, und Tools, mit denen du zu einer solchen offenen Gesellschaft beitragen und deine Meinung sichtbar machen kannst.<br><strong>Wenn du gleich damit loslegen möchtest, dann schau dir die <a href="/materialsammlung/ideas/">Projektideen</a> an.</strong>
-                    </p>
-                    {% include blog-filters.liquid %}
+                        Wie schaffen wir es, eine Gesellschaft zu gestalten, die offen ist und im Sinne der Gemeinschaft agiert? Wir müssen aktiv werden. Hier finden Jugendliche und Aktive in der Jugendarbeit Materialien zu Themen, die eine solche Gesellschaft ausmachen, und Tools, um zu dieser beizutragen.<br><strong>Wenn du gleich damit loslegen möchtest, dann schau dir die <a href="/materialsammlung/ideas/">Projektideen</a> an.</strong>                    {% include blog-filters.liquid %}
                 </div>
             </div>
 
