--- a/team/index.html
+++ b/team/index.html
@@ -163,7 +163,7 @@ hide_hero: true
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="https://www.th-koeln.de/personen/maike.groen"> <img class="img-circle member-avatar" alt="Maike Groen" src="/img/avatars/maike-groen.jpg"></a>
                     <p class="members-image-content">
-                         <span class="speaker-name"><a class="text__blue" href="https://www.th-koeln.de/personen/maike.groen">Maike Groen</a></span> unterstütze uns bei der Entwicklung der Workshopformate mit Insights zu Medienpädagogik und -sozialisation.
+                         <span class="speaker-name"><a class="text__blue" href="https://www.th-koeln.de/personen/maike.groen">Maike Groen</a></span> unterstütze uns bei der Workshopentwicklung mit Medienpädagogik und -sozialisation.
                     </p>
                 </div>
 
