--- a/info/index.html
+++ b/info/index.html
@@ -15,15 +15,67 @@ hide_hero: true
           </p>
         </div>
         <img  class="img-responsive" src="/static/img/wimmelbild.jpg" alt="Wimmelbild CC BY-SA 4.0">
-        <div class="col-lg-8 col-lg-offset-2">
+        <div class="col-lg-6 col-lg-offset-3">
           <p>
-              Die Demokratielabore sind ein Modellprojekt des <a class="highlight-grey" href="https://www.okfn.de/">Open Knowledge Foundation Deutschland e.V.</a>, das von der <a class="highlight-grey" href="https://www.bpb.de">Bundeszentrale für politische Bildung </a> und vom <a class="highlight-grey" href="https://www.bmfsfj.de/">Bundesministerium für Familie, Senioren, Frauen und Jugend</a> im Rahmen des Bundesprogramms <a class="highlight-grey" href="https://www.demokratie-leben.de/">"Demokratie leben!"</a> (Zeitraum 06/2017 - 12/2018) gefördert wird.
+              Die Demokratielabore sind ein Modellprojekt des <a href="https://www.okfn.de/">Open Knowledge Foundation Deutschland e.V.</a>, das von der <a href="https://www.bpb.de">Bundeszentrale für politische Bildung </a> und vom <a href="https://www.bmfsfj.de/">Bundesministerium für Familie, Senioren, Frauen und Jugend</a> im Rahmen des Bundesprogramms <a href="https://www.demokratie-leben.de/">"Demokratie leben!"</a> (Zeitraum 06/2017 - 12/2018) gefördert wird.
           </p>
           <p>
               Wir führen verschiedene Workshop- und Aktionsformate mit Jugendlichen im Alter von 12 bis 21 Jahren rund um Digitalisierung, Technologien und gesellschaftliches Miteinander durch. Dazu arbeiten wir eng mit außerschulischen Jugendeinrichtungen und überregionalen Bildungsverbänden und Initiativen zusammen – deutschlandweit. 
           </p>
         </div>
       </div>
-   </div>
+    </div>
   </div>
 </div>
+<!--
+<div class="col-xs-12 fond__white jumbotron">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        <div class="col-lg-3 col-lg-offset-1 stats">
+          <p><span class="h1">40</span><br>
+            verschiedene Jugendeinrichtungen. dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+          </p>
+        </div>
+        <div class="col-lg-3 col-lg-offset-1 stats">
+          <p><span class="h1">80</span><br>
+            Während der Projektlaufzeit waren wir in 80 verschiedenen Jugendeinrichtungen und sind somit durch ganz Deutschland gereist.
+          </p>
+        </div>
+        <div class="col-lg-3 col-lg-offset-1 stats">
+          <p><span class="h1">94</span><br>
+            Workshopdurchführungen haben wir realisiert. In XX Workshops konnten wir Jugendliche für Hate Speech, der Selbstdarsellung von Sozialen Netzwerken oder Fake News sensibilisieren. Fachkräften in Jugendeinrichtungen und Multiplikatorinnen haben wir XX Workshops die Arbeit mit Datensätzen oder Sensoren vermittelt.
+          </p>
+        </div>
+        <div class="col-lg-3 col-lg-offset-1 stats">
+          <p><span class="h1">880</span><br>
+            verschiedene Jugendeinrichtungen. dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+          </p>
+        </div>
+        <div class="col-lg-3 col-lg-offset-1 stats">
+          <p><span class="h1">400</span><br>
+            Während der Projektlaufzeit waren wir in 80 verschiedenen Jugendeinrichtungen und sind somit durch ganz Deutschland gereist.
+          </p>
+        </div>
+        <div class="col-lg-3 col-lg-offset-1 stats">
+          <p><span class="h1">19</span><br>
+            Workshopdurchführungen haben wir realisiert. In XX Workshops konnten wir Jugendliche für Hate Speech, der Selbstdarsellung von Sozialen Netzwerken oder Fake News sensibilisieren. Fachkräften in Jugendeinrichtungen und Multiplikatorinnen haben wir XX Workshops die Arbeit mit Datensätzen oder Sensoren vermittelt.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="col-xs-12 fond__white jumbotron">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        <h1 class="text-center">Hier waren wir überall</h1>
+        <div class="col-lg-3 col-lg-offset-1 stats">
+          
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+-->
