update maike und jenny link

--- a/team/index.html
+++ b/team/index.html
@@ -136,19 +136,19 @@ hide_hero: true
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="https://shop.nikkifaktur.de"> <img class="img-circle member-avatar" alt="Christoph Hoppenbrock" src="/img/avatars/nikkifaktur.gif"></a>
                     <p class="members-image-content">
-                         <span class="speaker-name"><a class="text__blue" href="https://shop.nikkifaktur.de">Nikkifaktur</a></span>hat unsere fabelhaften Shirts und Turnbeutel produziert! 
+                         <span class="speaker-name"><a class="text__blue" href="https://shop.nikkifaktur.de">Nikkifaktur</a></span> hat unsere fabelhaften Shirts und Turnbeutel produziert! 
                     </p>
                 </div>
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="http://bildbauer.de"> <img class="img-circle member-avatar" alt="Christoph Hoppenbrock" src="/img/avatars/bildbauer.jpg"></a>
                     <p class="members-image-content">
-                         <span class="speaker-name"><a class="text__blue" href="http://bildbauer.de">Christoph Hoppenbrock</a></span>hat die fantastischen Illustrationen gemacht. 
+                         <span class="speaker-name"><a class="text__blue" href="http://bildbauer.de">Christoph Hoppenbrock</a></span> hat die fantastischen Illustrationen gemacht. 
                     </p>
                 </div>
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="http://vonspree.de"> <img class="img-circle member-avatar" alt="vonSpree" src="/img/avatars/vonspree.gif"></a>
                     <p class="members-image-content">
-                         <span class="speaker-name"><a class="text__blue" href="http://vonspree.de">von Spree</a></span>haben die schönen Teaser-Videos für die Workshops gemacht.
+                         <span class="speaker-name"><a class="text__blue" href="http://vonspree.de">von Spree</a></span> haben die schönen Teaser-Videos für die Workshops gemacht.
                     </p>
                 </div>
 
@@ -156,35 +156,36 @@ hide_hero: true
                     <a class="members-image-wrap" href="http://thisisnoteden.de"> <img class="img-circle member-avatar" alt="Marie Wolf" src="/img/avatars/marie_alex.gif"></a>
                     <p class="members-image-content">
                          <span class="speaker-name"><a class="text__blue" href="http://thisisnoteden.com/">Marie Wolf 
-                         &amp; Alex Köpke</a></span>gestalteten das Handbuch, die Handreichungen und Bedarfsanalyse in Rekordzeit für uns.
+                         &amp; Alex Köpke</a></span> gestalteten das Handbuch, die Handreichungen und Bedarfsanalyse in Rekordzeit für uns.
                     </p>
                 </div>
             
                 <div class="members col-sm-6 col-lg-4">
-                    <a class="members-image-wrap" href="https://www.th-koeln.de/personen/maike.groen"> <img class="img-circle member-avatar" alt="Maike Groen" src="/img/avatars/maike-groen.jpg"></a>
+                    <a class="members-image-wrap" href="https://www.th-koeln.de/personen/maike.groen/"> <img class="img-circle member-avatar" alt="Maike Groen" src="/img/avatars/maike-groen.jpg"></a>
                     <p class="members-image-content">
-                         <span class="speaker-name"><a class="text__blue" href="https://www.th-koeln.de/personen/maike.groen">Maike Groen</a></span> unterstütze uns bei der Workshopentwicklung mit Medienpädagogik und -sozialisation.
+                         <span class="speaker-name"><a class="text__blue" href="https://www.th-koeln.de/personen/maike.groen/">Maike Groen</a></span> unterstütze uns bei der Workshopentwicklung mit Medienpädagogik und -sozialisation.
                     </p>
                 </div>
 
                 <div class="members col-sm-6 col-lg-4">
+                    <a class="members-image-wrap" href="http://justonewing.de/">
                     <img class="img-circle member-avatar" alt="Jennifer L. Hicks" src="/img/avatars/Jennifer-Hicks.jpg">
                     <p class="members-image-content">
-                         <span class="speaker-name"><a class="text__blue">Jennifer L. Hicks</a></span>entwickelte den Workshop "Invasion der Cybertrolle".
+                         <span class="speaker-name"><a class="text__blue" href="http://justonewing.de/">Jennifer L. Hicks</a></span> entwickelte den Workshop "Invasion der Cybertrolle".
                     </p>
                 </div>
 
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="http://dragonlab.de/"> <img class="img-circle member-avatar" alt="Tobias Wehrum" src="/img/avatars/tobias.png"></a>
                     <p class="members-image-content">
-                         <span class="speaker-name"><a class="text__blue" href="http://dragonlab.de/">Tobias Wehrum</a></span>programmierte Apps für den Workshop "Ungehörsam".
+                         <span class="speaker-name"><a class="text__blue" href="http://dragonlab.de/">Tobias Wehrum</a></span> programmierte Apps für den Workshop "Ungehörsam".
                     </p>
                 </div>
 
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="http://polyspektiv.eu"> <img class="img-circle member-avatar" alt="Polyspektiv" src="/img/avatars/polyspektiv-logo.png"></a>
                     <p class="members-image-content">
-                         <span class="speaker-name"><a class="text__blue" href="http://polyspektiv.eu/">Polyspektiv</a></span>entwickelten mit uns gemeinsam den Workshop "Auf Mikas Spuren".
+                         <span class="speaker-name"><a class="text__blue" href="http://polyspektiv.eu/">Polyspektiv</a></span> entwickelten mit uns gemeinsam den Workshop "Auf Mikas Spuren".
                     </p>
                 </div>
 
@@ -192,21 +193,21 @@ hide_hero: true
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="https://stuhlkreisrevolte.de/"> <img class="img-circle member-avatar" alt="stuhlkreis_revolte" src="/img/avatars/stuhlkreis_revolte.jpg"></a>
                     <p class="members-image-content">
-                         <span class="speaker-name"><a class="text__blue" href="https://stuhlkreisrevolte.de/">stuhlkreis_revolte</a></span>unterstützt uns regelmäßig mit Teamer*innen bei unseren Workshops.
+                         <span class="speaker-name"><a class="text__blue" href="https://stuhlkreisrevolte.de/">stuhlkreis_revolte</a></span> unterstützt uns regelmäßig mit Teamer*innen bei unseren Workshops.
                     </p>
                 </div>
 
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="http://www.creative-gaming.eu/"> <img class="img-circle member-avatar" alt="Creative Gaming" src="/img/avatars/Creative-Gaming.jpg"></a>
                     <p class="members-image-content">
-                         <span class="speaker-name"><a class="text__blue" href="http://www.creative-gaming.eu/">Creative Gaming</a></span>unterstützt uns bei vielen Workshop-Durchführungen.
+                         <span class="speaker-name"><a class="text__blue" href="http://www.creative-gaming.eu/">Creative Gaming</a></span> unterstützt uns bei vielen Workshop-Durchführungen.
                     </p>
                 </div>
             
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="http://www.youthpolicy.org/"> <img class="img-circle member-avatar" alt="Youth Policy Labs" src="/img/avatars/ypl_logo1.jpg"></a>
                     <p class="members-image-content">
-                         <span class="speaker-name"><a class="text__blue" href="http://www.youthpolicy.org/">Youth Policy Labs</a></span>entwickelten mit uns Materialien für die Selbstlernplattform.
+                         <span class="speaker-name"><a class="text__blue" href="http://www.youthpolicy.org/">Youth Policy Labs</a></span> entwickelten mit uns Materialien für die Selbstlernplattform.
                     </p>
                 </div>
             </div> 
