--- a/team/index.html
+++ b/team/index.html
@@ -24,61 +24,61 @@ hide_hero: true
                  <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="mailto:lydia.boettcher@okfn.de"><img class="img-circle member-avatar" alt="Lydia Böttcher" src="/img/avatars/lydia.jpg"></a>
                     <p class="members-image-content">
-                        <span class="speaker-name"><a class="text__blue" href="mailto:lydia.boettcher@okfn.de">Lydia Böttcher</a> </span>Projektleiterin<br> lydia.boettcher@okfn.de
+                        <span class="speaker-name"><a class="text__blue" href="mailto:lydia.boettcher@okfn.de">Lydia Böttcher</a> </span><br> Projektleiterin
                     </p>
                 </div>
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="mailto:matthias.loewe@okfn.de"><img class="img-circle member-avatar" alt="Matthias Löwe" src="/img/avatars/matthias.jpg"></a>
                     <p class="members-image-content">
-                        <span class="speaker-name"><a class="text__blue" href="mailto:matthias.loewe@okfn.de">Matthias Löwe</a></span>Projektmanager Workshops<br> matthias.loewe@okfn.de
+                        <span class="speaker-name"><a class="text__blue" href="mailto:matthias.loewe@okfn.de">Matthias Löwe</a></span><br> Projektmanager Workshops
                     </p>
                 </div>
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="mailto:maximilian.voigt@okfn.de"><img class="img-circle member-avatar" alt="Maximilian Voigt" src="/img/avatars/max.jpg"></a>
                     <p class="members-image-content">
-                        <span class="speaker-name"><a class="text__blue"  href="mailto:maximilian.voigt@okfn.de">Maximilian Voigt</a> </span>Projektmanager Digital-AGs & Materialplattform<br> maximilian.voigt@okfn.de
+                        <span class="speaker-name"><a class="text__blue"  href="mailto:maximilian.voigt@okfn.de">Maximilian Voigt</a> </span><br> Projektmanager Digital-AGs & Materialplattform
                     </p>
                 </div>
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="mailto:jasmin.helm@okfn.de"><img class="img-circle member-avatar" alt="Jasmin Helm" src="/img/avatars/jasmin.jpg"></a>
                     <p class="members-image-content">
-                        <span class="speaker-name"><a class="text__blue" href="mailto:jasmin.helm@okfn.de">Jasmin Helm</a> </span>Projektmanagerin Kommunikation<br> jasmin.helm@okfn.de
+                        <span class="speaker-name"><a class="text__blue" href="mailto:jasmin.helm@okfn.de">Jasmin Helm</a> </span><br> Projektmanagerin Kommunikation
                     </p>
                 </div>
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="mailto:paula.gruenwald@okfn.de"><img class="img-circle member-avatar" alt="Paula Grünwald" src="/img/avatars/paula.jpg"></a>
                     <p class="members-image-content">
-                        <span class="speaker-name"><a class="text__blue"  href="mailto:paula.gruenwald@okfn.de">Paula Grünwald (geb. Glaser)</a> </span>Projektkoordinatorin<br> paula.gruenwald@okfn.de
+                        <span class="speaker-name"><a class="text__blue"  href="mailto:paula.gruenwald@okfn.de">Paula Grünwald (geb. Glaser)</a> </span><br> Projektkoordinatorin
                     </p>
                 </div>
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="mailto:juliane.krueger@okfn.de"><img class="img-circle member-avatar" alt="Juliane Krueger" src="/img/avatars/juliane2.jpg"></a>
                     <p class="members-image-content">
-                        <span class="speaker-name"><a class="text__blue"  href="mailto:juliane.krueger@okfn.de">Juliane Kr&uuml;ger</a> </span>Projektmanagerin Organisation<br> juliane.krueger@okfn.de
+                        <span class="speaker-name"><a class="text__blue"  href="mailto:juliane.krueger@okfn.de">Juliane Kr&uuml;ger</a> </span><br> Projektmanagerin Organisation
                     </p>
                 </div>
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="mailto:sonja.fischbauer@okfn.de"><img class="img-circle member-avatar" alt="Sonja Fischbauer" src="/img/avatars/sonja.jpg"></a>
                     <p class="members-image-content">
-                        <span class="speaker-name"><a class="text__blue"  href="mailto:sonja.fischbauer@okfn.de">Sonja Fischbauer</a> </span>Projektmanagerin<br> sonja.fischbauer@okfn.de
+                        <span class="speaker-name"><a class="text__blue"  href="mailto:sonja.fischbauer@okfn.de">Sonja Fischbauer</a> </span><br> Projektmanagerin
                     </p>
                 </div>
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="mailto:nadine.stammen@okfn.de"><img class="img-circle member-avatar" alt="Nadine Stammen" src="/img/avatars/nadine.jpg"></a>
                     <p class="members-image-content">
-                        <span class="speaker-name"><a class="text__blue"  href="mailto:nadine.stammen@okfn.de">Nadine Stammen</a> </span>Designerin<br> nadine.stammen@okfn.de
+                        <span class="speaker-name"><a class="text__blue"  href="mailto:nadine.stammen@okfn.de">Nadine Stammen</a> </span><br> Designerin
                     </p>
                 </div>
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="mailto:leonard.wolf@okfn.de"><img class="img-circle member-avatar" alt="Leonard Wolf" src="/img/avatars/leo.jpg"></a>
                     <p class="members-image-content">
-                        <span class="speaker-name"><a class="text__blue"  href="mailto:leonard.wolf@okfn.de">Leonard Wolf</a> </span>Studentischer Mitarbeiter<br> leonard.wolf@okfn.de
+                        <span class="speaker-name"><a class="text__blue"  href="mailto:leonard.wolf@okfn.de">Leonard Wolf</a> </span><br> Studentischer Mitarbeiter
                     </p>
                 </div>  
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="mailto:lea.pfau@okfn.de"><img class="img-circle member-avatar" alt="Lea Pfau" src="/img/avatars/lea.jpg"></a>
                     <p class="members-image-content">
-                        <span class="speaker-name"><a class="text__blue"  href="mailto:lea.pfau@okfn.de">Lea Pfau</a> </span>Studentische Mitarbeiterin<br> lea.pfau@okfn.de
+                        <span class="speaker-name"><a class="text__blue"  href="mailto:lea.pfau@okfn.de">Lea Pfau</a> </span><br>Studentische Mitarbeiterin
                     </p>
                 </div>                                                                                                 
               <!--  <div class="members col-sm-6 col-lg-4">
@@ -117,7 +117,7 @@ hide_hero: true
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="http://medialepfade.de"><img class="img-circle member-avatar" alt="Mediale Pfade" src="/img/avatars/medialepfade.jpg"></a>
                     <p class="members-image-content">
-                        <span class="speaker-name"><a class="text__blue" href="http://medialepfade.de">medialepfade.org</a></span>unterstützten uns 2017 und 2018 bei der pädagogischen Ausrichtung.
+                        <span class="speaker-name"><a class="text__blue" href="http://medialepfade.de">medialepfade.org</a></span> unterstützten uns 2017 und 2018 bei der pädagogischen Ausrichtung.
                     </p>
                 </div>
                 <div class="members col-sm-6 col-lg-4">
@@ -156,7 +156,7 @@ hide_hero: true
                     <a class="members-image-wrap" href="http://thisisnoteden.de"> <img class="img-circle member-avatar" alt="Marie Wolf" src="/img/avatars/marie_alex.gif"></a>
                     <p class="members-image-content">
                          <span class="speaker-name"><a class="text__blue" href="http://thisisnoteden.com/">Marie Wolf 
-                         &amp; Alex Köpke</a></span> gestalteten das Handbuch, die Handreichungen und Bedarfsanalyse in Rekordzeit für uns.
+                         &amp; Alex Köpke</a></span> gestalteten Handbuch, Handreichungen und Bedarfsanalyse in Rekordzeit.
                     </p>
                 </div>
             
@@ -193,14 +193,14 @@ hide_hero: true
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="https://stuhlkreisrevolte.de/"> <img class="img-circle member-avatar" alt="stuhlkreis_revolte" src="/img/avatars/stuhlkreis_revolte.jpg"></a>
                     <p class="members-image-content">
-                         <span class="speaker-name"><a class="text__blue" href="https://stuhlkreisrevolte.de/">stuhlkreis_revolte</a></span> unterstützt uns regelmäßig mit Teamer*innen bei unseren Workshops.
+                         <span class="speaker-name"><a class="text__blue" href="https://stuhlkreisrevolte.de/">stuhlkreis_revolte</a></span> unterstützte uns regelmäßig mit Teamer*innen bei unseren Workshops.
                     </p>
                 </div>
 
                 <div class="members col-sm-6 col-lg-4">
                     <a class="members-image-wrap" href="http://www.creative-gaming.eu/"> <img class="img-circle member-avatar" alt="Creative Gaming" src="/img/avatars/Creative-Gaming.jpg"></a>
                     <p class="members-image-content">
-                         <span class="speaker-name"><a class="text__blue" href="http://www.creative-gaming.eu/">Creative Gaming</a></span> unterstützt uns bei vielen Workshop-Durchführungen.
+                         <span class="speaker-name"><a class="text__blue" href="http://www.creative-gaming.eu/">Creative Gaming</a></span> unterstützte uns bei vielen Workshop-Durchführungen.
                     </p>
                 </div>
             
