--- a/publikationen/index.html
+++ b/publikationen/index.html
@@ -21,7 +21,7 @@ hide_hero: true
         </p>
         <div class="klasse">
           <a href="https://handbuch.demokratielabore.de/"><button type="button" class="btn-arrow">Zu Kapitel 1 <span class="btn-arrow"></span></button></a>
-          <a class="linked" href="/">Download PDF</a>
+          <a class="linked" href="/static/files/DL_Handbuch.pdf">Download PDF</a>
         </div>
       </div>
     </div>
