--- a/info/index.html
+++ b/info/index.html
@@ -37,31 +37,33 @@ hide_hero: true
 
 <div class="col-xs-12 fond__white jumbotron">
   <div class="container">
-    <div class="row">
-      <div class="col-xs-12">
-        <div class="col-lg-3 col-lg-offset-1 stats">
+    <div class="col-xs-12">
+      <div class="row">
+        <div class="col-lg-3 col-md-3 col-md-offset-1 col-lg-offset-1 stats">
           <p><span class="h1">40</span><br>
              verschiedenen Jugendeinrichtungen haben wir besucht, sie unterstützt miteinander vernetzt und unsere Workshops durchgeführt.
           </p>
         </div>
-        <div class="col-lg-3 col-lg-offset-1 stats">
+        <div class="col-lg-3 col-md-3 col-md-offset-1 col-lg-offset-1 stats">
           <p><span class="h1">94</span><br>
             Workshopdurchführungen haben wir realisiert.
           </p>
         </div>
-        <div class="col-lg-3 col-lg-offset-1 stats">
+        <div class="col-lg-3 col-md-3 col-md-offset-1 col-lg-offset-1 stats">
           <p><span class="h1">400</span><br>
             Jugendliche haben wir für Hate Speech, der Selbstdarsellung von Sozialen Netzwerken oder Fake News sebsibilisiert.
           </p>
         </div>
-        <div class="col-lg-3 col-lg-offset-1 stats">
+      </div>
+      <div class="row">
+        <div class="col-lg-3 col-md-3 col-md-offset-1 col-lg-offset-1 stats">
           <p><span class="h1">880</span><br>
             Fachkräfte in Jugendeinrichtungen haben wir die Arbeit mit Datensätzen oder Sensoren vermittelt.
           </p>
         </div>
-        <div class="col-lg-3 col-lg-offset-1 stats">
+        <div class="col-lg-3 col-md-3 col-md-offset-1 col-lg-offset-1 stats">
           <p><span class="h1">21</span><br>
-            Wir waren an 21 verschiedenen Orten und haben somit einen Einblick in die Jugendarbeit in ganz Deutschland gewinnen können. Unsere Erfahrungen haben wir euch in einem <a href="/blog/">Blogpost zusammengefasst. 
+            Wir waren an 21 verschiedenen Orten und haben somit einen Einblick in die Jugendarbeit in ganz Deutschland gewinnen können. Unsere Erfahrungen haben wir euch in einem <a href="/blog/">Blogpost zusammengefasst.</a> 
           </p>
         </div>
       </div>
